<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">设计圈</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="subscribe_my_category">栏目</string>
    <string name="subscribe_manager_category_info_2">单击增删栏目，长按拖拽排序</string>
    <string name="title_activity_web_detail">WebDetailActivity</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_designer">DesignerActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_me_info">MeInfoActivity</string>
    <string name="title_activity_advice">AdviceActivity</string>
    <string name="title_activity_me_detail_info">MeDetailInfoActivity</string>
    <string name="title_activity_zx_detail_info">ZxDetailInfoActivity</string>
    <string name="title_activity_designer_list">DesignerListActivity</string>
    <string name="title_activity_my_opus">MyOpusActivity</string>
    <string name="title_activity_collecy">CollecyActivity</string>
    <string name="title_activity_set_data">SetDataActivity</string>
    <string name="title_activity_des_style_list">DesStyleListActivity</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="title_activity_designer_detail_activity2">DesignerDetailActivity2</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_near_designer">NearDesignerActivity</string>
    <string name="title_activity_basic_map">BasicMapActivity</string>
    <string name="title_activity_my_code">MyCodeActivity</string>
    <string name="title_activity_code">CodeActivity</string>
    <string name="title_">SerchActivity</string>
    <string name="title_activity_select_city">SelectCityActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_news_list">NewsListActivity</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="title_activity_opus">OpusActivity</string>
    <string name="title_activity_entust_detail">EntustDetailActivity</string>
    <string name="title_activity_my_comment">MyCommentActivity</string>
    <string name="title_activity_add_news">AddNewsActivity</string>
    <string name="title_activity_add_case">AddCaseActivity</string>
    <string name="title_activity_web_opus">WebOpusActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_school">SchoolActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="help_add_case"></string>
    <string name="title_activity_senior_serch">SeniorSerchActivity</string>
    <string name="title__designer">SerchDesignerActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_designer_detail">DesignerDetailActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_oauth1">OAuth1Activity</string>
    <string name="title_activity_oauth2">OAuth2Activity</string>
    <string name="designer">设计师</string>
    <string name="fans">粉丝</string>
    <string name="my_opus">我的作品</string>
    <string name="my_older">我的委托单</string>
    <string name="my_mesage">我的消息</string>
    <string name="my_info">我的资料</string>
    <string name="account_info">账户信息</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_entrust">我的委托</string>
    <string name="my_comment">我的评论</string>
    <string name="upload_opus">上传作品</string>
    <string name="tool">工具</string>
    <string name="advice_feedback">意见与反馈</string>
    <string name="setting">设置</string>
    <string name="please_login">请登录</string>
    <string name="visitors">访客</string>
    <string name="follow">关注</string>
    <string name="save_2code">保存二维码</string>
    <string name="company">公司</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="all_city">全国</string>
    <string name="scan_my_2code">扫描我的二维码，访问微名片</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_set_wei_shop">SetWeiShopActivity</string>
    <string name="title_activity_wei_preview">WeiPreviewActivity</string>
    <string name="title_activity_wei_shop">WeiShopActivity</string>
    <string name="title_activity_wei_shop_info_ui">WeiShopInfoUI</string>
    <string name="network_sorry">抱歉没能获取到数据，请稍候</string>
    <string name="network_error">无法连接到服务器，请检查网络</string>
    <string name="default_design">点亮设计灵感，打造美好家居生活</string>
    <string name="NULL_DATA">抱歉，没有找到您要的内容</string>
    <string name="NOT_MORE_DATA">没有更多了...</string>
    <string name="LOAD_FAILURE">加载失败</string>
    <string name="title_activity_wei_shop_news_ui">WeiShopNewsUI</string>
    <string name="title_activity_selecti_dentity">SelectiDentityActivity</string>
    <string name="title_activity_owner_detail_info">OwnerDetailInfoActivity</string>
    <string name="title_activity_select_style">SelectStyleActivity</string>
    <string name="title_activity_bind_manage">帐号绑定</string>
    <string name="adialog_bin_title">解除绑定后，将不可再用%s登录</string>
    <string name="will_contact_with_you">%s将很快与您联系</string>
    <string name="sign_in">"签到 "</string>
    <string name="title_activity_message">我的消息</string>
    <string name="title_activity_entrust_design">预约设计师</string>
    <string name="title_activity_order">我的委托</string>
    <string name="title_activity_order_log_main">委托状态</string>
    <string name="title_activity_order_comment_info">点评详情</string>
    <string name="title_activity_order_again">委托设计</string>
    <string name="title_activity_auto_name">申请实名认证</string>
    <string name="title_activity_wei_shop_web">WeiShopWebActivity</string>
    <string name="loading_data">正在获取数据...</string>
    <string name="i_have_code">我已收到验证码</string>
    <string name="tips_advice">我们期待听到您的声音，把最好的体验带给您！</string>
    <string name="title_activity_call">CallActivity</string>
    <string name="title_activity_wbshare">WBShareActivity</string>
    <string name="title_activity_login_ui">LoginUI</string>
    <string name="title_activity_tips">TipsActivity</string>
    <string name="title_activity_scheme">SchemeActivity</string>
    <string name="title_activity_owner_order_info">OwnerOrderInfoActivity</string>
    <string name="title_activity_owner_up_file">OwnerUpFileActivity</string>
    <string name="title_activity_order_info">OrderInfoActivity</string>
    <string name="title_activity_order_info_designer">OrderInfoDesignerActivity</string>
    <string name="title_activity_modifyphone">ModifyphoneActivity</string>
    <string name="title_activity_complaints">ComplaintsActivity</string>
    <string name="title_activity_cancel_order">CancelOrderActivity</string>
    <string name="title_activity_mobile_phone">MobilePhoneActivity</string>
    <string name="title_activity_bound">BoundActivity</string>
    <string name="title_activity_pass">PasswodActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_guide_activity1">GuideActivity1</string>
    <string name="title_activity_tuei_jian">TueiJianActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_strategy">StrategyActivity</string>
    <string name="title_activity_overall">OverallActivity</string>
    <string name="title_activity_company">CompanyActivity</string>
    <string name="title_activity_zhuan_xiu">ZhuanXiuActivity</string>
    <string name="title_activity_xiang_qin">XiangQinActivity</string>
    <string name="title_activity_select_city_activity1">SelectCityActivity1</string>
    <string name="title_activity_stra_tegy">StraTegyActivity</string>
    <string name="title_activity_stage">StageActivity</string>
    <string name="title_activity_shenji">ShenjiActivity</string>
    <string name="title_activity_web_opus_activity1">WebOpusActivity1</string>
    <string name="title_activity_guide_activity2">GuideActivity2</string>
    <string name="title_activity_message_activity1">MessageActivity1</string>
    <string name="title_activity_pinluen">PinluenActivity</string>
    <string name="title_activity_weizx">WeizxActivity</string>
    <string name="title_activity_gongsi">GongsiActivity</string>
    <string name="title_activity_zheng_shu">ZhengShuActivity</string>
    <string name="title_activity_an_liown">AnLiownActivity</string>
    <string name="title_activity_sm">SmActivity</string>
    <string name="title_activity_myanli">MyanliActivity</string>
    <string name="title_activity_my_xuanzhe">MyXuanzheActivity</string>
    <string name="title_activity_zhuanxiu">ZhuanxiuActivity</string>
    <string name="title_activity_zz">ZzActivity</string>
    <string name="title_activity_map_serch">MapSerchActivity</string>
    <string name="title_activity_fuwu">FuwuActivity</string>
    <string name="title_activity_maozx">MaozxActivity</string>
    <string name="title_activity_web_opuszx">WebOpuszxActivity</string>

</resources>